2001-10-12  Alex Larsson  <alexl@redhat.com>

	* main.c (kill_free_drawers):
	Queue up all the destroys until after we've gone through
	the panel_list, since the destroys can change the list.

2001-10-11  Alex Larsson  <alexl@redhat.com>

	* gnome-run.c (simple_contents_shown):
	Remove gtk_clist_columns_autosize() call. It crashed,
	and we only have one column anyway.
	
2001-10-11  Alex Larsson  <alexl@redhat.com>

        * foobar-widget.c (foobar_widget_update_winhints):
	Use the gtk hint calls.

	* basep-widget.c (basep_widget_update_winhints):
	Use the gtk hint calls.
	
2001-10-11  Alex Larsson  <alexl@redhat.com>

	* menu.c (menus_have_icons):
	New function that always returns TRUE. Should use GConf
	instead. Changed all gnome_preferences_get_menus_have_icons
	to menus_have_icons().
	(fake_pixmap_from_fake):
	Connect to the signals before showing the widget.
	
2001-10-11  Alex Larsson  <alexl@redhat.com>

	* applet.c (applet_button_press):
	Don't return TRUE here, it makes the buttons not
	work. I'm not sure about the comment here in the old
	code. Returning TRUE never blocked anything in
	gtk 1.2....

	* panel-widget.c:
	Fix some code inside #ifdef PANEL_DEBUG
	
2001-10-11  Alex Larsson  <alexl@redhat.com>

	* menu-fentry.c (fr_fill_dir, fr_read_dir,
	fr_check_and_reread):
	Move to new GnomeDesktopItem api

	* menu-fentry.h (struct DirRect):
	renams dentry* to ditem*

	* menu.c (edit_direntry, add_applet):
	Warn when running commented function.
	(show_item_menu):
	Update to new GnomeDesktopItem API

	* panel.c (drop_urilist):
	Warn when running commented function.
	
	
2001-10-10  Alex Larsson  <alexl@redhat.com>

	* menu.c (add_drawers_from_dir):
	converted to use gnome-desktop-item, and removed
	#ifdef FIXME

2001-10-10  Mark McLoughlin <mark@skynet.ie>

	* extern.h, extern.c (extern_ref, extern_unref, 
	  extern_clean): privatise.
	  (extern_set_info, extern_(get|set)_orient, ): kill.
	  (extern_handle_*): impl. Privatise the handling of
	this stuff.